# RESTifAI

./: .gitignore  README.md  run.sh  run_restifai_app.sh  setup.sh
evaluation/: README.md  evaluate.py
results/: evaluation.csv
results/fdic/AutoRestTest/: results.json
results/fdic/LogiAgent/: main_result_1755583814407_PID_1.json  main_result_1755583889313_PID_1.json  main_result_1755583957442_PID_1.json  main_result_1755584058940_PID_1.json  main_result_1755584118549_PID_1.json  main_result_1755584232336_PID_1.json  results.json
results/fdic/RESTifAI/: results.json
results/genome-nexus/AutoRestTest/: results.json
results/genome-nexus/LogiAgent/: main_result_1755523626627_PID_1.json  main_result_1755523679856_PID_1.json  main_result_1755523789202_PID_1.json  main_result_1755524005367_PID_1.json  main_result_1755524216307_PID_1.json  main_result_1755524287132_PID_1.json  results.json
results/genome-nexus/RESTifAI/: results.json
results/language-tool/AutoRestTest/: results.json
results/language-tool/LogiAgent/: main_result_1755522833122_PID_1.json  results.json
results/language-tool/RESTifAI/: results.json
results/ohsome/AutoRestTest/: results.json
results/ohsome/LogiAgent/: main_result_1758098029244_PID_1.json  main_result_1758098126749_PID_1.json  main_result_1758098233671_PID_1.json  (+64 more)
run_service_scripts/: start-genome-nexus.sh  start-language-tool.sh  start-rest-countries.sh  stop-genome-nexus.sh  stop-language-tool.sh  stop-rest-countries.sh
services/genome-nexus/: .env  .gitbook.yaml  .gitignore  .travis.yml  Dockerfile  README.md  docker-compose.yml  pom.xml
services/restcountries/: pom.xml
tools/AutoRestTest/: .dockerignore  .env.example  .gitignore  AutoRestTest.py  Dockerfile  LICENSE  README.md  arm_setup.sh  auto-rest-test.yaml  configurations.py  macos_setup.sh  requirements.txt  run_all_services.sh  setup.sh
tools/LogiAgent/: .gitignore  Dockerfile  README.md  evalution.py  global_vars_funcs_configs.py  llm_graph_build.py  logi_agent.py  requirements.txt  rest_graph.py  swagger_helper.py  test_scenario.py  test_scenario_unittests.py  tools.py  tools_tests.py
tools/RESTifAI/: .env.example  .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  pyproject.toml  requirements.txt
tools/RESTifAI/env_init_scripts/: reset-fastapi-db.sh
tools/RESTifAI/specifications/: fastapi-template.json  petstore.json
tools/RESTifAI/src/: MCP_README.md  app.py  basecase_flow_generator.py  custom_request_sender.py  llm_manager.py  llm_output_parser.py  mcp_server.py  operation_flow.py  postman_collection_builder.py  prompt_templates.py  report_data_models.py  script_executor.py  spec_parser.py  test_case_generator.py  test_report_manager.py
tools/RESTifAI/src/cli_scripts/: generate_tests.py  judge_evaluation.py  judge_test_results.py
tools/RESTifAI/src/test_case_judge/: TestCaseJudge_README.md  test_case_judge.py
tools/RESTifAI/src/ui_components/: configuration_tab.py  generation_tab.py  report_tab.py  specification_tab.py  tests_tab.py
(+12098 files in other folders)
